@@ -1,8 +1,6 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project
- xmlns="https://maven.apache.org/POM/4.0.0"
- xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
- xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
 >
  <modelVersion>4.0.0</modelVersion>
  <groupId>wahpenayo</groupId>
@@ -14,73 +12,73 @@
  <properties>
   <doclint>none</doclint>
   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  <apfloat-version>1.10.1</apfloat-version>
-  <asm-version>9.3</asm-version>
+  <apfloat-version>1.11.1</apfloat-version>
+  <asm-version>9.5</asm-version>
   <cheshire-version>5.11.0</cheshire-version>
   <clatrix-version>0.5.0</clatrix-version>
   <clj-tuple-version>0.2.2</clj-tuple-version>
   <clojure-version>1.11.1</clojure-version>
-  <clojure-core-async-version>1.5.648</clojure-core-async-version>
+  <clojure-core-async-version>1.6.673</clojure-core-async-version>
   <clojure-core-memoize-version>1.0.257</clojure-core-memoize-version>
   <clojure-math-numeric-tower-version>0.0.5</clojure-math-numeric-tower-version>
-  <clojure-maven-version>1.8.4</clojure-maven-version>
+  <clojure-maven-version>1.9.2</clojure-maven-version>
   <clojure.vmargs>-ea -dsa</clojure.vmargs>
   <clojure.options>-ea -dsa -Dclojure.compiler.direct-linking=true</clojure.options>
   <clojurecl-version>0.15.1</clojurecl-version>
-  <commons-compress-version>1.21</commons-compress-version>
+  <commons-compress-version>1.23.0</commons-compress-version>
   <commons-lang3-version>3.12.0</commons-lang3-version>
   <commons-math3-version>3.6.1</commons-math3-version>
-  <commons-rng-version>1.4</commons-rng-version>
+  <commons-rng-version>1.5</commons-rng-version>
   <codox-version>0.10.8</codox-version>
   <criterium-version>0.4.6</criterium-version>
   <doclint>none</doclint>
   <eclipse-collections-version>11.1.0</eclipse-collections-version>
   <exif-processor-version>0.3.0</exif-processor-version>
-  <fastutil-version>8.5.8</fastutil-version>
+  <fastutil-version>8.5.12</fastutil-version>
   <fipp-version>0.6.26</fipp-version>
   <github-url>scm:git:https://github.com/${project.groupId}/${project.artifactId}.git</github-url>
   <graph-maven-version>1.2.3</graph-maven-version>
-  <guava-version>31.1-jre</guava-version>
+  <guava-version>32.1.1-jre</guava-version>
   <hiccup-version>1.0.5</hiccup-version>
   <hppc-version>0.9.1</hppc-version>
-  <java-version>18</java-version>
+  <java-version>20</java-version>
   <java-sizeof-version>0.0.5</java-sizeof-version>
-  <jgit-version>6.2.0.202206071550-r</jgit-version>
-  <jcuda-version>11.6.1</jcuda-version>
+  <jgit-version>6.6.0.202305301015-r</jgit-version>
+  <jcuda-version>11.8.0</jcuda-version>
   <jscience-version>4.3.3</jscience-version>
-  <junit-jupiter-version>5.8.2</junit-jupiter-version>
-  <junit-platform-version>1.8.2</junit-platform-version>
+  <junit-jupiter-version>5.10.0</junit-jupiter-version>
+  <junit-platform-version>1.10.0</junit-platform-version>
   <jts-version>1.19.0</jts-version>
   <lifecycle-mapping-version>1.0.0</lifecycle-mapping-version>
-  <maven-assembly-version>3.4.1</maven-assembly-version>
+  <maven-assembly-version>3.6.0</maven-assembly-version>
   <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
-  <maven-clean-version>3.2.0</maven-clean-version>
-  <maven-compiler-version>3.10.1</maven-compiler-version>
-  <maven-dependency-version>3.3.0</maven-dependency-version>
-  <maven-deploy-plugin-version>3.0.0-M2</maven-deploy-plugin-version>
-  <maven-enforcer-version>3.1.0</maven-enforcer-version>
-  <maven-install-plugin-version>3.0.0-M1</maven-install-plugin-version>
-  <maven-jar-version>3.2.2</maven-jar-version>
-  <maven-javadoc-version>3.4.0</maven-javadoc-version>
-  <maven-project-info-reports-version>3.3.0</maven-project-info-reports-version>
-  <maven-release-plugin-version>3.0.0-M6</maven-release-plugin-version>
-  <maven-resources-plugin-version>3.2.0</maven-resources-plugin-version>
-  <maven-scm-plugin-version>2.0.0-M1</maven-scm-plugin-version>
-  <maven-site-version>3.12.0</maven-site-version>
-  <maven-source-plugin-version>3.2.1</maven-source-plugin-version>
-  <maven-surefire-version>3.0.0-M7</maven-surefire-version>
+  <maven-clean-version>3.3.1</maven-clean-version>
+  <maven-compiler-version>3.11.0</maven-compiler-version>
+  <maven-dependency-version>3.6.0</maven-dependency-version>
+  <maven-deploy-plugin-version>3.1.1</maven-deploy-plugin-version>
+  <maven-enforcer-version>3.3.0</maven-enforcer-version>
+  <maven-install-plugin-version>3.1.1</maven-install-plugin-version>
+  <maven-jar-version>3.3.0</maven-jar-version>
+  <maven-javadoc-version>3.5.0</maven-javadoc-version>
+  <maven-project-info-reports-version>3.4.5</maven-project-info-reports-version>
+  <maven-release-plugin-version>3.0.1</maven-release-plugin-version>
+  <maven-resources-plugin-version>3.3.1</maven-resources-plugin-version>
+  <maven-scm-plugin-version>2.0.1</maven-scm-plugin-version>
+  <maven-site-version>4.0.0-M9</maven-site-version>
+  <maven-source-plugin-version>3.3.0</maven-source-plugin-version>
+  <maven-surefire-version>3.1.2</maven-surefire-version>
   <metadata-extractor-version>2.18.0</metadata-extractor-version>
   <numbers-java-version>1.8.2</numbers-java-version>
-  <oshi-version>6.2.1</oshi-version>
+  <oshi-version>6.4.4</oshi-version>
   <pandect-version>1.0.2</pandect-version>
   <parboiled-java-version>1.4.1</parboiled-java-version>
-  <potemkin-version>0.4.5</potemkin-version>
-  <slf4j-version>1.7.36</slf4j-version>
+  <potemkin-version>0.4.6</potemkin-version>
+  <slf4j-version>2.0.7</slf4j-version>
   <spire_2_12_version>0.17.0</spire_2_12_version>
   <spire_2_13_version>0.18.0</spire_2_13_version>
   <timestamp>${maven.build.timestamp}</timestamp>
   <uncommons-maths-version>1.2.3</uncommons-maths-version>
-  <versions-maven-plugin-version>2.10.0</versions-maven-plugin-version>
+  <versions-maven-plugin-version>2.15.0</versions-maven-plugin-version>
   <!-- TODO: test all 6.x versions -->
   <!-- <xmp-core-version>5.1.3</xmp-core-version> -->
   <xmp-core-version>6.0.6</xmp-core-version>
@@ -138,8 +136,8 @@
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-release-plugin</artifactId>
      <version>${maven-release-plugin-version}</version>
-     <!-- change to deploy to deploy to a maven repo as well as installing the source 
-      in Github. Need to setup distributionManagement for that. -->
+     <!-- change to deploy to a maven repo as well as installing the source
+      in GitHub. Need to set up distributionManagement for that. -->
      <configuration>
       <!-- goals>install</goals -->
       <goals>deploy</goals>
@@ -162,7 +160,7 @@
           </goals>
          </pluginExecutionFilter>
          <action>
-          <ignore />
+          <ignore/>
          </action>
         </pluginExecution>
         <pluginExecution>
@@ -175,7 +173,7 @@
           </goals>
          </pluginExecutionFilter>
          <action>
-          <ignore />
+          <ignore/>
          </action>
         </pluginExecution>
        </pluginExecutions>
@@ -195,7 +193,7 @@
      <argLine>-Xmx4G -Xms4G</argLine>
     </configuration>
     <dependencies>
-    <!-- 
+     <!--
      <dependency>
       <groupId>org.junit.platform</groupId>
       <artifactId>junit-platform-surefire-provider</artifactId>
@@ -280,8 +278,10 @@
     <configuration>
      <source>${java-version}</source>
      <target>${java-version}</target>
+     <release>${java-version}</release>
      <compilerArgs>
       <arg>-J-Dclojure.compiler.direct-linking=true</arg>
+      <arg>--enable-preview</arg>
      </compilerArgs>
     </configuration>
    </plugin>
@@ -306,7 +306,7 @@
        <overWriteReleases>false</overWriteReleases>
        <overWriteSnapshots>true</overWriteSnapshots>
        <overWriteIfNewer>true</overWriteIfNewer>
-       <fileSeparator>/</fileSeparator>
+       <!-- fileSeparator>/</fileSeparator -->
        <silent>true</silent>
       </configuration>
      </execution>
@@ -338,14 +338,12 @@
     <artifactId>maven-javadoc-plugin</artifactId>
     <version>${maven-javadoc-version}</version>
     <configuration>
-     <additionalparam>-Xdoclint:none</additionalparam>
+     <additionalJOption>-Xdoclint:none</additionalJOption>
      <outputDirectory>${project.basedir}</outputDirectory>
      <reportOutputDirectory>${project.basedir}</reportOutputDirectory>
      <destDir>target/doc/javadoc</destDir>
      <overview>src/main/java/overview.html</overview>
-     <showPackage>true</showPackage>
-     <showProtected>true</showProtected>
-     <showPrivate>true</showPrivate>
+     <show>private</show>
      <quiet>true</quiet>
     </configuration>
     <executions>
@@ -356,7 +354,7 @@
        <goal>javadoc</goal>
       </goals>
       <configuration>
-       <additionalparam>-Xdoclint:none</additionalparam>
+       <additionalJOption>-Xdoclint:none</additionalJOption>
       </configuration>
      </execution>
     </executions>
@@ -414,21 +412,19 @@
     </reportSets>
     <configuration>
      <!-- <destDir>target/site/docs/</destDir> -->
-     <additionalparam>-Xdoclint:none</additionalparam>
+     <additionalJOption>-Xdoclint:none</additionalJOption>
      <outputDirectory>${project.basedir}c</outputDirectory>
      <reportOutputDirectory>${project.basedir}</reportOutputDirectory>
      <destDir>target/doc/javadoc</destDir>
      <overview>src/main/java/overview.html</overview>
-     <showPackage>true</showPackage>
-     <showProtected>true</showProtected>
-     <showPrivate>true</showPrivate>
+     <show>private</show>
      <quiet>true</quiet>
     </configuration>
    </plugin>
    <plugin>
     <groupId>org.codehaus.mojo</groupId>
     <artifactId>versions-maven-plugin</artifactId>
-    <version>${versions-plugin-version}</version>
+    <version>${versions-maven-plugin-version}</version>
     <reportSets>
      <reportSet>
       <reports>
